<resources>
    <string name="app_name">Cashless Ride</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_topup_history">Top-Up History</string>
    <string name="title_activity_topup">Top-up</string>
    <string name="title_activity_book">Book Schedule</string>
    <string name="title_activity_booking_history">Booking History</string>
    <string name="title_activity_redeem">Redeem</string>
    <string name="title_activity_redeem_history">Redeem History</string>
    <string name="title_activity_booking_paid">Paid Bookings</string>
    <string name="title_activity_account">Account</string>

    <string name="prompt_firstname">First Name*</string>
    <string name="prompt_lastname">Last Name*</string>
    <string name="prompt_email">Email*</string>
    <string name="prompt_count">Count</string>
    <string name="prompt_password">Password*</string>
    <string name="prompt_confirm_password">Confirm Password*</string>
    <string name="prompt_amount">Amount (Php)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="action_update">Update</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username_password">Incorrect username or password.</string>
    <string name="text_welcome">Welcome To\nCashless Ride</string>
    <string name="button_text_login">Login</string>
    <string name="button_text_register">Register</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_cashless_ride">Cashless Ride</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>

    <string name="notification_channel_id">notification_channel_passenger</string>
    <string name="notification_channel_name">Passenger\'s Notification</string>
</resources>
