<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cashlessride.booking.ui.LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cashless_ride"
            android:textColor="@android:color/white"
            android:textSize="@dimen/material_typography_display2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/material_layout_vertical_spacing_tool_bar"
            android:layout_above="@+id/container_input"/>

    <LinearLayout
            android:id="@+id/container_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                android:selectAllOnFocus="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:hint="@string/text_password">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_register"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"/>
    </LinearLayout>

    <FrameLayout
            android:id="@+id/view_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            tools:visibility="visible">

        <ProgressBar
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </FrameLayout>

</RelativeLayout>
