<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/material_layout_keylines_screen_edge_margin"
        android:orientation="vertical"
        tools:context="com.cashlessride.booking.ui.RegisterActivity">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textSize="@dimen/material_typography_display2"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/container_register"/>

    <LinearLayout
            android:id="@+id/container_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:hint="@string/prompt_firstname">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_register"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:hint="@string/prompt_lastname">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_register"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:hint="@string/prompt_email">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:hint="@string/prompt_password">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"
                android:hint="@string/prompt_confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/material_layout_vertical_spacing_between_content_areas"/>

    </LinearLayout>

    <FrameLayout
            android:id="@+id/view_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            tools:visibility="visible">

        <ProgressBar
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </FrameLayout>

</RelativeLayout>
